CORE-4476: Fixing alignment of cart quantity in core.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-primary.scss
@@ -325,9 +325,12 @@ header {
       #{$left}: -0.375rem;
       border-radius: 50%;
       padding: 0;
-      line-height: 2;
       width: 1.25rem;
       height: 1.25rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      line-height: normal !important;
     }
   }
 
